<resources>
    <string name="app_name">Aura Parfum</string>
    <string name="home_label">Home</string>
    <string name="cart_label">Cart</string>
    <string name="account_label">Account</string>
    <string name="addresses_label">My Addresses</string>
    <string name="orders_label">My Orders</string>
    <string name="account_settings_label">My Account</string>
    <string name="primary_address">Primary</string>
    <string name="full_name_input_hint">Full name</string>
    <string name="address_input_hint">Address</string>
    <string name="city_input_hint">City</string>
    <string name="postal_code_input_hint">Postal Code</string>
    <string name="phone_input_hint">Phone</string>
    <string name="note_input_hint">Note</string>
    <string name="save_label">Save</string>
    <string name="total_payment_label">Harga Total</string>
    <string name="pay_label">Bayar</string>
    <string name="sign_in_label">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="welcome_back_label">Welcome Back!</string>
    <string name="join_with_us">Join with us!</string>
    <string name="forgot_your_password_label">Forgot your password?</string>
    <string name="reset_here_label">Reset Here</string>
    <string name="loading_label">Please wait a moment</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="phone_number_label">Phone</string>
    <string name="reset_password">Reset Password</string>
</resources>