<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/home_menu">

    <fragment
        android:id="@+id/home_menu"
        tools:layout="@layout/fragment_home"
        android:name="com.github.dimsmith.auraparfum.fragments.HomeFragment"
        android:label="@string/home_label" />
    <fragment
        android:id="@+id/cart_menu"
        tools:layout="@layout/fragment_cart"
        android:name="com.github.dimsmith.auraparfum.fragments.CartFragment"
        android:label="@string/cart_label" />
    <fragment
        android:id="@+id/account_menu"
        tools:layout="@layout/fragment_account"
        android:name="com.github.dimsmith.auraparfum.fragments.AccountFragment"
        android:label="@string/account_label" />
</navigation>